// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`linux > appimage tool: 1.0.3 > AppImage - arm64 1`] = `
{
  "linux": [
    {
      "arch": "arm64",
      "file": "TestApp.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux-arm64.yml",
      "fileContent": {
        "files": [
          {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.AppImage",
          },
        ],
        "path": "TestApp.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`linux > appimage tool: 1.0.3 > AppImage - arm64 2`] = `
{
  "linux": [
    {
      "arch": "arm64",
      "file": "TestApp.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux-arm64.yml",
      "fileContent": {
        "files": [
          {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp.AppImage",
          },
        ],
        "path": "TestApp.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;
